[package]
name = "ffs"
version = "0.1.0"
edition = "2021"

[dependencies]
hcloud = "0.21.0"
serde = { version = "1", features = ["derive"] }
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"

[dev-dependencies]
clippy = { version = "0.0.302" }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

