[package]
name = "ffs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
hcloud = "0.21.0"
serde = { version = "1", features = ["derive"] }
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
clap = { version = "4.0", features = ["derive", "color"] }


[dev-dependencies]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

